added more answers

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body-page">
     <header class="top-header">
-    <h1>Placeholder</h1>
+    <h1>Placeholder!</h1>
     <p>Score: <span class="score">3242</span></p>
     </header>
     <div class="entire">
@@ -52,57 +52,65 @@
             </div>
         </ul>
         <ul class="col">
-            <li class="cat">Jason</li>
+            <li class="cat">Category 2</li>
             <li class="points" onclick="openPopup21()">100</li>
             <div class="popup" id="popup21">
                     <h2>100 POINT QUESTION</h2>
                     <p>i am some text</p>
-                    <button type="button" onclick="closePopup21()">close</button>
+                    <p class="prev" onclick="displayAns6()">Answer: <span class="ans" id="ans6">im the answer</span></p>
+                    <button type="button" onclick="closePopup21(), removeAns6()">close</button>
             </div>
             <li class="points" onclick="openPopup22()">200</li>
             <div class="popup" id="popup22">
                 <h2>200 POINT QUESTION</h2>
                 <p>i am some more epic text</p>
-                <button type="button" onclick="closePopup22()">close</button>
+                <p class="prev" onclick="displayAns7()">Answer: <span class="ans" id="ans7">no, im the answer</span></p>
+                <button type="button" onclick="closePopup22(), removeAns7()">close</button>
             </div>
             <li class="points" onclick="openPopup23()">300</li>
             <div class="popup" id="popup23">
                 <h2>300 POINT QUESTION</h2>
                 <p>i am some more extra epic text</p>
-                <button type="button" onclick="closePopup23()">close</button>
+                <p class="prev" onclick="displayAns8()">Answer: <span class="ans" id="ans8">oh yeah sheesh</span></p>
+                <button type="button" onclick="closePopup23(), removeAns8()">close</button>
             </div>
             <li class="points" onclick="openPopup24()">400</li>
             <div class="popup" id="popup24">
                 <h2>400 POINT QUESTION</h2>
                 <p>i am some super mega epic text</p>
-                <button type="button" onclick="closePopup24()">close</button>
+                <p class="prev" onclick="displayAns9()">Answer: <span class="ans" id="ans9">oh yeayea</span></p>
+                <button type="button" onclick="closePopup24(), removeAns9()">close</button>
             </div>
             <li class="points" onclick="openPopup25()">500</li>
             <div class="popup" id="popup25">
                 <h2>500 POINT QUESTION</h2>
                 <p>i am final boss epic text</p>
-                <button type="button" onclick="closePopup25()">close</button>
+                <p class="prev" onclick="displayAns10()">Answer: <span class="ans" id="ans10">surprising</span></p>
+                <button type="button" onclick="closePopup25(), removeAns10()">close</button>
             </div>
         </ul>
         <ul class="col">
-            <li class="cat">Adam</li>
+            <li class="cat">Category 3</li>
             <li class="points" onclick="openPopup31()">100</li>
             <div class="popup" id="popup31">
                 <h2>100 POINT QUESTION</h2>
                 <p>i am some new text</p>
-                <button type="button" onclick="closePopup31()">close</button>
+                <p class="prev" onclick="displayAns11()">Answer: <span class="ans" id="ans11">back again?</span></p>
+                <button type="button" onclick="closePopup31(), removeAns11()">close</button>
             </div>
             <li class="points" onclick="openPopup32()">200</li>
             <div class="popup" id="popup32">
                 <h2>200 POINT QUESTION</h2>
                 <p>i am some newer text</p>
-                <button type="button" onclick="closePopup32()">close</button>
+                <p class="prev" onclick="displayAns12()">Answer: <span class="ans" id="ans12">meow bruh</span></p>
+                <button type="button" onclick="closePopup32(), removeAns12()">close</button>
             </div>
             <li class="points" onclick="openPopup33()">300</li>
             <div class="popup" id="popup33">
                 <h2>300 POINT QUESTION</h2>
                 <p>i am some even newer text</p>
-                <button type="button" onclick="closePopup33()">close</button>
+                <p class="prev" onclick="displayAns13()">Answer: <span class="ans" id="ans13">*hits the griddy*</span></p>
+                <button type="button" onclick="closePopup33(), removeAns13()">close</button>
             </div>
             <li class="points" onclick="openPopup34()">400</li>
             <div class="popup" id="popup34">
@@ -118,7 +126,7 @@
             </div>
         </ul>
         <ul class="col">
-            <li class="cat">Andrew</li>
+            <li class="cat">Category 4</li>
             <li class="points" onclick="openPopup41()">100</li>
             <div class="popup" id="popup41">
                 <h2>100 POINT QUESTION</h2>
@@ -151,7 +159,7 @@
         </div>
         </ul>
         <ul class="col">
-            <li class="cat">Category 5</li>
+            <li class="cat">Misc.</li>
             <li class="points" onclick="openPopup51()">100</li>
             <div class="popup" id="popup51">
                 <h2>100 POINT QUESTION</h2>
