finished answer cards

--- a/index.html
+++ b/index.html
@@ -116,13 +116,15 @@
             <div class="popup" id="popup34">
                 <h2>400 POINT QUESTION</h2>
                 <p>dont look at me</p>
-                <button type="button" onclick="closePopup34()">close</button>
+                <p class="prev" onclick="displayAns14()">Answer: <span class="ans" id="ans14">shits and farts</span></p>
+                <button type="button" onclick="closePopup34(), removeAns14()">close</button>
             </div>
             <li class="points" onclick="openPopup35()">500</li>
             <div class="popup" id="popup35">
                 <h2>500 POINT QUESTION</h2>
                 <p>i said dont look at me</p>
-                <button type="button" onclick="closePopup35()">close</button>
+                <p class="prev" onclick="displayAns15()">Answer: <span class="ans" id="ans15">poops and doops</span></p>
+                <button type="button" onclick="closePopup35(), removeAns15()">close</button>
             </div>
         </ul>
         <ul class="col">
@@ -131,31 +133,36 @@
             <div class="popup" id="popup41">
                 <h2>100 POINT QUESTION</h2>
                 <p>bruh face momen</p>
-                <button type="button" onclick="closePopup41()">close</button>
+                <p class="prev" onclick="displayAns16()">Answer: <span class="ans" id="ans16">gwafwafwad</span></p>
+                <button type="button" onclick="closePopup41(), removeAns16()">close</button>
             </div>
             <li class="points" onclick="openPopup42()">200</li>
             <div class="popup" id="popup42">
                 <h2>200 POINT QUESTION</h2>
                 <p>cmon bruh, look at u</p>
-                <button type="button" onclick="closePopup42()">close</button>
+                <p class="prev" onclick="displayAns17()">Answer: <span class="ans" id="ans17">omg omg omg</span></p>
+                <button type="button" onclick="closePopup42(), removeAns17()">close</button>
             </div>
             <li class="points" onclick="openPopup43()">300</li>
             <div class="popup" id="popup43">
                 <h2>300 POINT QUESTION</h2>
                 <p>bruh still lookin goofy</p>
-                <button type="button" onclick="closePopup43()">close</button>
+                <p class="prev" onclick="displayAns18()">Answer: <span class="ans" id="ans18">spiderpig</span></p>
+                <button type="button" onclick="closePopup43(), removeAns18()">close</button>
             </div>
             <li class="points" onclick="openPopup44()">400</li>
             <div class="popup" id="popup44">
                 <h2>400 POINT QUESTION</h2>
                 <p>why bruh still here?</p>
-                <button type="button" onclick="closePopup44()">close</button>
+                <p class="prev" onclick="displayAns19()">Answer: <span class="ans" id="ans19">cody is gay</span></p>
+                <button type="button" onclick="closePopup44(), removeAns19()">close</button>
             </div>
            <li class="points" onclick="openPopup45()">500</li>
            <div class="popup" id="popup45">
             <h2>500 POINT QUESTION</h2>
             <p>go away bruh frfr</p>
-            <button type="button" onclick="closePopup45()">close</button>
+            <p class="prev" onclick="displayAns20()">Answer: <span class="ans" id="ans20">chief littlefoot</span></p>
+            <button type="button" onclick="closePopup45(), removeAns20()">close</button>
         </div>
         </ul>
         <ul class="col">
@@ -164,31 +171,36 @@
             <div class="popup" id="popup51">
                 <h2>100 POINT QUESTION</h2>
                 <p>bruhbruhbruh</p>
-                <button type="button" onclick="closePopup51()">close</button>
+                <p class="prev" onclick="displayAns21()">Answer: <span class="ans" id="ans21">andrew the giant</span></p>
+                <button type="button" onclick="closePopup51(), removeAns21()">close</button>
             </div>
             <li class="points" onclick="openPopup52()">200</li>
             <div class="popup" id="popup52">
                 <h2>200 POINT QUESTION</h2>
                 <p>cmon lil bruh watchu doin?</p>
-                <button type="button" onclick="closePopup52()">close</button>
+                <p class="prev" onclick="displayAns22()">Answer: <span class="ans" id="ans22">ivar the micro</span></p>
+                <button type="button" onclick="closePopup52(), removeAns22()">close</button>
             </div>
             <li class="points" onclick="openPopup53()">300</li>
             <div class="popup" id="popup53">
                 <h2>300 POINT QUESTION</h2>
                 <p>dont keep goin bruh</p>
-                <button type="button" onclick="closePopup53()">close</button>
+                <p class="prev" onclick="displayAns23()">Answer: <span class="ans" id="ans23">micro jackson</span></p>
+                <button type="button" onclick="closePopup53(), removeAns23()">close</button>
             </div>
             <li class="points" onclick="openPopup54()">400</li>
             <div class="popup" id="popup54">
                 <h2>400 POINT QUESTION</h2>
                 <p>hello im rydawg</p>
-                <button type="button" onclick="closePopup54()">close</button>
+                <p class="prev" onclick="displayAns24()">Answer: <span class="ans" id="ans24">Lil Chola</span></p>
+                <button type="button" onclick="closePopup54(), removeAns24()">close</button>
             </div>
             <li class="points" onclick="openPopup55()">500</li>
            <div class="popup" id="popup55">
             <h2>500 POINT QUESTION</h2>
             <p>now youve really pissed me off</p>
-            <button type="button" onclick="closePopup55()">close</button>
+            <p class="prev" onclick="displayAns25()">Answer: <span class="ans" id="ans25">little show</span></p>
+            <button type="button" onclick="closePopup55(), removeAns25()">close</button>
         </div>
         </ul>
     </div>
