--- a/index.html
+++ b/index.html
@@ -15,39 +15,44 @@
     <div class="entire">
         <ul class="col" style="padding-left: 0px;">
             <li class="cat">Tim</li>
-            <li class="points" onclick="openPopup()">100</li>
+            <li class="points" id="card1" onclick="openPopup()">100</li>
                 <div class="popup" id="popup">
                 <h2>100 POINT QUESTION</h2>
                 <p>This is example text.</p>
-                <p class="prev" onclick="displayAns()">Answer: <span class="ans" id="ans">insert text</span></p>
+                <p class="prev" onclick="displayAns(), removeCard()">Answer</p>
+                <span class="ans" id="ans">insert text</span>
                 <button type="button" onclick="closePopup(), removeAns()">close</button>
                 </div>
-            <li class="points" onclick="openPopup2()">200</li>
+            <li class="points" id="card2" onclick="openPopup2()">200</li>
             <div class="popup" id="popup2">
                 <h2>200 POINT QUESTION</h2>
                 <p>This is epic example text.</p>
-                <p class="prev" onclick="displayAns2()">Answer: <span class="ans" id="ans2">poopy text</span></p>
+                <p class="prev" onclick="displayAns2(), removeCard2()">Answer</p>
+                <span class="ans" id="ans2">poopy text</span>
                 <button type="button" onclick="closePopup2(), removeAns2()">close</button>
             </div>
-            <li class="points" onclick="openPopup3()">300</li>
+            <li class="points" id="card3" onclick="openPopup3()">300</li>
             <div class="popup" id="popup3">
                 <h2>300 POINT QUESTION</h2>
                 <p>This is some more example text.</p>
-                <p class="prev" onclick="displayAns3()">Answer: <span class="ans" id="ans3">poopy doopy text</span></p>
+                <p class="prev" onclick="displayAns3(), removeCard3()">Answer</p>
+                <span class="ans" id="ans3">poopy doopy text</span>
                 <button type="button" onclick="closePopup3(), removeAns3()">close</button>
             </div>
-            <li class="points" onclick="openPopup4()">400</li>
+            <li class="points" id="card4" onclick="openPopup4()">400</li>
             <div class="popup" id="popup4">
                 <h2>400 POINT QUESTION</h2>
                 <p>This is some more epic example text.</p>
-                <p class="prev" onclick="displayAns4()">Answer: <span class="ans" id="ans4">silly text</span></p>
+                <p class="prev" onclick="displayAns4(), removeCard4()">Answer</p>
+                <span class="ans" id="ans4">silly text</span>
                 <button type="button" onclick="closePopup4(), removeAns4()">close</button>
             </div>
-            <li class="points" onclick="openPopup5()">500</li>
+            <li class="points" id="card5" onclick="openPopup5()">500</li>
             <div class="popup" id="popup5">
                 <h2>500 POINT QUESTION</h2>
                 <p>This is the final epic example text.</p>
-                <p class="prev" onclick="displayAns5()">Answer: <span class="ans" id="ans5">silly billy text</span></p>
+                <p class="prev" onclick="displayAns5(), removeCard5()">Answer</p>
+                <span class="ans" id="ans5">silly billy text</span>
                 <button type="button" onclick="closePopup5(), removeAns5()">close</button>
             </div>
         </ul>
@@ -57,35 +62,40 @@
             <div class="popup" id="popup21">
                     <h2>100 POINT QUESTION</h2>
                     <p>i am some text</p>
-                    <p class="prev" onclick="displayAns6()">Answer: <span class="ans" id="ans6">im the answer</span></p>
+                    <p class="prev" onclick="displayAns6()">Answer</p>
+                    <span class="ans" id="ans6">im the answer</span>
                     <button type="button" onclick="closePopup21(), removeAns6()">close</button>
             </div>
             <li class="points" onclick="openPopup22()">200</li>
             <div class="popup" id="popup22">
                 <h2>200 POINT QUESTION</h2>
                 <p>i am some more epic text</p>
-                <p class="prev" onclick="displayAns7()">Answer: <span class="ans" id="ans7">no, im the answer</span></p>
+                <p class="prev" onclick="displayAns7()">Answer</p>
+                <span class="ans" id="ans7">no, im the answer</span>
                 <button type="button" onclick="closePopup22(), removeAns7()">close</button>
             </div>
             <li class="points" onclick="openPopup23()">300</li>
             <div class="popup" id="popup23">
                 <h2>300 POINT QUESTION</h2>
                 <p>i am some more extra epic text</p>
-                <p class="prev" onclick="displayAns8()">Answer: <span class="ans" id="ans8">oh yeah sheesh</span></p>
+                <p class="prev" onclick="displayAns8()">Answer</p>
+                <span class="ans" id="ans8">oh yeah sheesh</span>
                 <button type="button" onclick="closePopup23(), removeAns8()">close</button>
             </div>
             <li class="points" onclick="openPopup24()">400</li>
             <div class="popup" id="popup24">
                 <h2>400 POINT QUESTION</h2>
                 <p>i am some super mega epic text</p>
-                <p class="prev" onclick="displayAns9()">Answer: <span class="ans" id="ans9">oh yeayea</span></p>
+                <p class="prev" onclick="displayAns9()">Answer</p>
+                <span class="ans" id="ans9">oh yeayea</span>
                 <button type="button" onclick="closePopup24(), removeAns9()">close</button>
             </div>
             <li class="points" onclick="openPopup25()">500</li>
             <div class="popup" id="popup25">
                 <h2>500 POINT QUESTION</h2>
                 <p>i am final boss epic text</p>
-                <p class="prev" onclick="displayAns10()">Answer: <span class="ans" id="ans10">surprising</span></p>
+                <p class="prev" onclick="displayAns10()">Answer</p>
+                <span class="ans" id="ans10">surprising</span>
                 <button type="button" onclick="closePopup25(), removeAns10()">close</button>
             </div>
         </ul>
@@ -95,35 +105,40 @@
             <div class="popup" id="popup31">
                 <h2>100 POINT QUESTION</h2>
                 <p>i am some new text</p>
-                <p class="prev" onclick="displayAns11()">Answer: <span class="ans" id="ans11">back again?</span></p>
+                <p class="prev" onclick="displayAns11()">Answer</p>
+                <span class="ans" id="ans11">back again?</span>
                 <button type="button" onclick="closePopup31(), removeAns11()">close</button>
             </div>
             <li class="points" onclick="openPopup32()">200</li>
             <div class="popup" id="popup32">
                 <h2>200 POINT QUESTION</h2>
                 <p>i am some newer text</p>
-                <p class="prev" onclick="displayAns12()">Answer: <span class="ans" id="ans12">meow bruh</span></p>
+                <p class="prev" onclick="displayAns12()">Answer</p>
+                <span class="ans" id="ans12">meow bruh</span>
                 <button type="button" onclick="closePopup32(), removeAns12()">close</button>
             </div>
             <li class="points" onclick="openPopup33()">300</li>
             <div class="popup" id="popup33">
                 <h2>300 POINT QUESTION</h2>
                 <p>i am some even newer text</p>
-                <p class="prev" onclick="displayAns13()">Answer: <span class="ans" id="ans13">*hits the griddy*</span></p>
+                <p class="prev" onclick="displayAns13()">Answer</p>
+                <span class="ans" id="ans13">*hits the griddy*</span>
                 <button type="button" onclick="closePopup33(), removeAns13()">close</button>
             </div>
             <li class="points" onclick="openPopup34()">400</li>
             <div class="popup" id="popup34">
                 <h2>400 POINT QUESTION</h2>
                 <p>dont look at me</p>
-                <p class="prev" onclick="displayAns14()">Answer: <span class="ans" id="ans14">shits and farts</span></p>
+                <p class="prev" onclick="displayAns14()">Answer</p>
+                <span class="ans" id="ans14">shits and farts</span>
                 <button type="button" onclick="closePopup34(), removeAns14()">close</button>
             </div>
             <li class="points" onclick="openPopup35()">500</li>
             <div class="popup" id="popup35">
                 <h2>500 POINT QUESTION</h2>
                 <p>i said dont look at me</p>
-                <p class="prev" onclick="displayAns15()">Answer: <span class="ans" id="ans15">poops and doops</span></p>
+                <p class="prev" onclick="displayAns15()">Answer</p>
+                <span class="ans" id="ans15">poops and doops</span>
                 <button type="button" onclick="closePopup35(), removeAns15()">close</button>
             </div>
         </ul>
@@ -133,35 +148,40 @@
             <div class="popup" id="popup41">
                 <h2>100 POINT QUESTION</h2>
                 <p>bruh face momen</p>
-                <p class="prev" onclick="displayAns16()">Answer: <span class="ans" id="ans16">gwafwafwad</span></p>
+                <p class="prev" onclick="displayAns16()">Answer</p>
+                <span class="ans" id="ans16">gwafwafwad</span>
                 <button type="button" onclick="closePopup41(), removeAns16()">close</button>
             </div>
             <li class="points" onclick="openPopup42()">200</li>
             <div class="popup" id="popup42">
                 <h2>200 POINT QUESTION</h2>
                 <p>cmon bruh, look at u</p>
-                <p class="prev" onclick="displayAns17()">Answer: <span class="ans" id="ans17">omg omg omg</span></p>
+                <p class="prev" onclick="displayAns17()">Answer</p>
+                <span class="ans" id="ans17">omg omg omg</span>
                 <button type="button" onclick="closePopup42(), removeAns17()">close</button>
             </div>
             <li class="points" onclick="openPopup43()">300</li>
             <div class="popup" id="popup43">
                 <h2>300 POINT QUESTION</h2>
                 <p>bruh still lookin goofy</p>
-                <p class="prev" onclick="displayAns18()">Answer: <span class="ans" id="ans18">spiderpig</span></p>
+                <p class="prev" onclick="displayAns18()">Answer</p>
+                <span class="ans" id="ans18">spiderpig</span>
                 <button type="button" onclick="closePopup43(), removeAns18()">close</button>
             </div>
             <li class="points" onclick="openPopup44()">400</li>
             <div class="popup" id="popup44">
                 <h2>400 POINT QUESTION</h2>
                 <p>why bruh still here?</p>
-                <p class="prev" onclick="displayAns19()">Answer: <span class="ans" id="ans19">cody is gay</span></p>
+                <p class="prev" onclick="displayAns19()">Answer</p>
+                <span class="ans" id="ans19">cody is gay</span>
                 <button type="button" onclick="closePopup44(), removeAns19()">close</button>
             </div>
            <li class="points" onclick="openPopup45()">500</li>
            <div class="popup" id="popup45">
             <h2>500 POINT QUESTION</h2>
             <p>go away bruh frfr</p>
-            <p class="prev" onclick="displayAns20()">Answer: <span class="ans" id="ans20">chief littlefoot</span></p>
+            <p class="prev" onclick="displayAns20()">Answer</p>
+            <span class="ans" id="ans20">chief littlefoot</span>
             <button type="button" onclick="closePopup45(), removeAns20()">close</button>
         </div>
         </ul>
@@ -171,35 +191,40 @@
             <div class="popup" id="popup51">
                 <h2>100 POINT QUESTION</h2>
                 <p>bruhbruhbruh</p>
-                <p class="prev" onclick="displayAns21()">Answer: <span class="ans" id="ans21">andrew the giant</span></p>
+                <p class="prev" onclick="displayAns21()">Answer</p>
+                <span class="ans" id="ans21">andrew the giant</span>
                 <button type="button" onclick="closePopup51(), removeAns21()">close</button>
             </div>
             <li class="points" onclick="openPopup52()">200</li>
             <div class="popup" id="popup52">
                 <h2>200 POINT QUESTION</h2>
                 <p>cmon lil bruh watchu doin?</p>
-                <p class="prev" onclick="displayAns22()">Answer: <span class="ans" id="ans22">ivar the micro</span></p>
+                <p class="prev" onclick="displayAns22()">Answer</p>
+                <span class="ans" id="ans22">ivar the micro</span>
                 <button type="button" onclick="closePopup52(), removeAns22()">close</button>
             </div>
             <li class="points" onclick="openPopup53()">300</li>
             <div class="popup" id="popup53">
                 <h2>300 POINT QUESTION</h2>
                 <p>dont keep goin bruh</p>
-                <p class="prev" onclick="displayAns23()">Answer: <span class="ans" id="ans23">micro jackson</span></p>
+                <p class="prev" onclick="displayAns23()">Answer</p>
+                <span class="ans" id="ans23">micro jackson</span>
                 <button type="button" onclick="closePopup53(), removeAns23()">close</button>
             </div>
             <li class="points" onclick="openPopup54()">400</li>
             <div class="popup" id="popup54">
                 <h2>400 POINT QUESTION</h2>
                 <p>hello im rydawg</p>
-                <p class="prev" onclick="displayAns24()">Answer: <span class="ans" id="ans24">Lil Chola</span></p>
+                <p class="prev" onclick="displayAns24()">Answer</p>
+                <span class="ans" id="ans24">Lil Chola</span>
                 <button type="button" onclick="closePopup54(), removeAns24()">close</button>
             </div>
             <li class="points" onclick="openPopup55()">500</li>
            <div class="popup" id="popup55">
             <h2>500 POINT QUESTION</h2>
             <p>now youve really pissed me off</p>
-            <p class="prev" onclick="displayAns25()">Answer: <span class="ans" id="ans25">little show</span></p>
+            <p class="prev" onclick="displayAns25()">Answer</p>
+            <span class="ans" id="ans25">little show</span>
             <button type="button" onclick="closePopup55(), removeAns25()">close</button>
         </div>
         </ul>
