add score button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body class="body-page">
     <header class="top-header">
     <h1>Placeholder!</h1>
-    <p>Score: <span class="score">3242</span></p>
+    <div>
+    <p>Score: <span class="score" id="score"></span></p><button class="addpts" onclick="scoreAdd()">Add 100 pts.</button>
+    </div>
     </header>
     <div class="entire">
         <ul class="col" style="padding-left: 0px;">
