--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header class="top-header">
     <h1>Placeholder!</h1>
     <div>
-    <p>Score: <span class="score" id="score">0</span></p><button class="addpts" onclick="scoreAdd()">Add 100 pts.</button><button class="subpts" onclick="scoreSub()">Sub 100 pts.</button>
+    <p>Score: <span class="score" id="score1">0</span></p><button class="addpts" onclick="scoreUpdate('score1',100)">Add 100 pts.</button><button class="subpts" onclick="scoreUpdate('score1',-100)">Sub 100 pts.</button>
     </div>
     <div>
-    <p>Score: <span class="score" id="score2">0</span></p><button class="addpts" onclick="scoreAdd2()">Add 100 pts.</button><button class="subpts" onclick="scoreSub2()">Sub 100 pts.</button>
+    <p>Score: <span class="score" id="score2">0</span></p><button class="addpts" onclick="scoreUpdate('score2',100)">Add 100 pts.</button><button class="subpts" onclick="scoreUpdate('score2',-100)">Sub 100 pts.</button>
     </div>
     <div>
-    <p>Score: <span class="score" id="score3">0</span></p><button class="addpts" onclick="scoreAdd3()">Add 100 pts.</button><button class="subpts" onclick="scoreSub3()">Sub 100 pts.</button>
+    <p>Score: <span class="score" id="score3">0</span></p><button class="addpts" onclick="scoreUpdate('score3',100)">Add 100 pts.</button><button class="subpts" onclick="scoreUpdate('score3',-100)">Sub 100 pts.</button>
     </div>
     </header>
     <div class="entire">
